# tokens-usage-dashboard

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/usage/: __init__.py  generate.py  utils.py
backend/tests/: test_usage_utils.py
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.tsx
frontend/src/components/: Spinner.tsx
frontend/src/components/CreditsUsageChart.tsx/: CreditsUsageChart.tsx  CreditsUsageChart.utils.tsx
frontend/src/components/CreditsUsageTable/: CopyURLButton.tsx  CreditsUsageTable.tsx  CreditsUsageTable.utils.tsx
frontend/src/hooks/: useFetch.ts
frontend/src/lib/: types.ts
frontend/src/lib/formatters/: date.ts
frontend/src/tests/components/CreditsUsageChart/: CreditsUsageChart.utils.test.ts
frontend/src/tests/components/CreditsUsageTable/: CreditsUsageTable.utils.test.ts
frontend/src/tests/lib/formatters/: date.test.ts
frontend/src/views/: DashboardView.tsx
