[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "jennethydyrova",email = "jennethydyrovaa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard] (>=0.123.8,<0.124.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
